UPDATED VARIOUS NICE FILES! VERY NICE FILES

--- a/templates/map.html
+++ b/templates/map.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>Hello World</h1>
+<div id="mapdiv" style="width: 600px; height: 400px;"></div>
+<div id="legenddiv"></div>
+
+
     <a href="{{ url_for('about') }}">About</a>
 {% endblock content %}
