--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,11 @@
 
     <meta charset="UTF-8">
     <title>AmMap</title>
-</head>
+    <script src="{{ url_for('static', filename='javascript/ammap/ammap.js')}}" type="text/javascript"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='javascript/ammap/ammap.css')}}" type="text/css" media="all" />
+    <script src="{{ url_for('static', filename='javascript/ammap/maps/js/worldLow.js')}}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='javascript/ammap/plugins/responsive/responsive.min.js')}}" type="text/javascript"></script>
+    </head>
 <body>
     <div class="container">
         <h3>Dies bleibt für immer</h3>
@@ -27,6 +31,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
     <!-- Own JavaScript -->
-    <script src="{{ url_for('static', filename='javascript/dummy.js') }}"></script>
+    <script src="{{ url_for('static', filename='javascript/map.js')}}" type="text/javascript"></script>
 </body>
 </html>
