--- a/iso_app/templates/layout.html
+++ b/iso_app/templates/layout.html
@@ -17,10 +17,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='javascript/ammap/ammap.css')}}" type="text/css" media="all" />
     <script src="{{ url_for('static', filename='javascript/ammap/maps/js/worldLow.js')}}" type="text/javascript"></script>
     <script src="{{ url_for('static', filename='javascript/ammap/plugins/responsive/responsive.min.js')}}" type="text/javascript"></script>
-    </head>
+</head>
 <body>
     <div class="container">
-        <h3>Dies bleibt für immer</h3>
+        <h1>Big Project</h1>
         {% block content %}{% endblock %}
     </div>
 
@@ -29,8 +29,5 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-    <!-- Own JavaScript -->
-    <script src="{{ url_for('static', filename='javascript/map.js')}}" type="text/javascript"></script>
 </body>
 </html>
