--- a/iso_app/templates/map.html
+++ b/iso_app/templates/map.html
@@ -1,8 +1,17 @@
 {% extends "layout.html" %}
 {% block content %}
-<div id="mapdiv" style="width: 600px; height: 400px;"></div>
-<div id="legenddiv"></div>
+    <script src="{{ url_for('static', filename='javascript/map.js')}}" type="text/javascript"></script>
+    
+    <div id="mapdiv" style="width: 600px; height: 400px;"></div>
+    
+    <script>create_map({});</script>
+    
+    <div id="legenddiv"></div>
 
-
-    <a href="{{ url_for('about') }}">About</a>
+    {% for key, val in button_dict.items() %}
+        <button type="button" class="btn btn-secondary btn-sm" onclick="create_map({{ val }})">{{ key }} Map</button>
+    {% endfor %}
+    <br>
+    <br>
+    <a class="btn btn-primary" role="button" href="{{ url_for('about') }}">About</a>
 {% endblock content %}
