--- a/iso_app/templates/map.html
+++ b/iso_app/templates/map.html
@@ -2,7 +2,7 @@
 {% block content %}
     <script src="{{ url_for('static', filename='javascript/map.js')}}" type="text/javascript"></script>
     
-    <div id="mapdiv" style="width: 600px; height: 400px;"></div>
+    <div id="mapdiv" class="responsive_map"></div>
     
     <script>create_map({});</script>
     
