UPDATED VARIOUS NICE FILES! VERY NICE FILES

--- a/iso_app/templates/desc.html
+++ b/iso_app/templates/desc.html
@@ -11,10 +11,8 @@
       <td>{{ src }}</td>
       {% for Hakuna, Matata in Hakuna.items() %}
         <td>{{ Hakuna }}</td>
-        {% for Matata, Farbe in Matata.items() %}
         <td>{{ Matata }}</td>
-        <td>{{ Farbe }}</td>
-        {% endfor %}
+        <td>{{ "Farbe" }}</td>
       {% endfor %}
     </tr>
   {% endfor %}
