UPDATED VARIOUS NICE FILES! VERY NICE FILES

--- a/iso_app/templates/desc.html
+++ b/iso_app/templates/desc.html
@@ -11,8 +11,7 @@
       <td>{{ src }}</td>
       {% for Hakuna, Matata in Hakuna.items() %}
         <td>{{ Hakuna }}</td>
-        <td>{{ Matata }}</td>
-        <td>{{ "Farbe" }}</td>
+        <td style="{{ Matata }}"></td>
       {% endfor %}
     </tr>
   {% endfor %}
